--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "ejs-mate": "^4.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.0"
   }
